--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,14 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "typeRoots": ["./types", "./node_modules/@types"],
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "types/**/*.ts"
   ]
 }
