Add a crop overlay to the image slider

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "expo-image-manipulator": "~13.0.6",
-    "expo-media-library": "~17.0.6"
+    "expo-media-library": "~17.0.6",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
