--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caroushowneo",
+  "name": "caroushow",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -48,7 +48,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-dev-client": "~5.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
