--- a/package.json
+++ b/package.json
@@ -20,32 +20,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.0",
     "expo": "^52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
@@ -55,15 +47,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@testing-library/react-native": "^13.0.1",
-    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "@types/redux-mock-store": "^1.5.0",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.5",
     "prettier": "^3.5.3",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "react-test-renderer": "18.3.1"
   },
   "private": true
 }
