--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@reduxjs/toolkit": "^2.6.0",
-    "expo": "^52.0.37",
+    "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
-    "expo-dev-client": "~5.0.12",
+    "expo-dev-client": "~5.0.13",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-media-library": "~17.0.6",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.18",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
@@ -49,9 +49,10 @@
     "@testing-library/react-native": "^13.0.1",
     "@types/react": "~18.3.12",
     "jest": "~29.7.0",
-    "jest-expo": "~52.0.5",
+    "jest-expo": "~52.0.6",
     "prettier": "^3.5.3",
-    "react-test-renderer": "18.3.1"
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
